[gd_scene load_steps=22 format=3 uid="uid://cboi8hec4yf0c"]

[ext_resource type="Script" uid="uid://vw3414rqvdqj" path="res://scripts/player.gd" id="1_7msvu"]
[ext_resource type="Texture2D" uid="uid://c7k0g4h5xyth2" path="res://assets/sprites/atlas.png" id="2_erru1"]
[ext_resource type="AudioStream" uid="uid://cshy5sbt77m5o" path="res://assets/audio/sfx/jump.wav" id="3_brij0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_erru1")
region = Rect2(0, 448, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_erru1")
region = Rect2(32, 448, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_erru1")
region = Rect2(64, 448, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_erru1")
region = Rect2(96, 448, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("2_erru1")
region = Rect2(0, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("2_erru1")
region = Rect2(32, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("2_erru1")
region = Rect2(64, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("2_erru1")
region = Rect2(96, 480, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("2_erru1")
region = Rect2(0, 416, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("2_erru1")
region = Rect2(32, 416, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("2_erru1")
region = Rect2(64, 416, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("2_erru1")
region = Rect2(96, 416, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("2_erru1")
region = Rect2(128, 416, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("2_erru1")
region = Rect2(160, 416, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("2_erru1")
region = Rect2(192, 416, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("2_erru1")
region = Rect2(224, 416, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_yexds"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}],
"loop": true,
"name": &"run",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eynex"]
radius = 3.0
height = 8.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_7msvu")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
limit_right = 276447231
limit_smoothed = true
position_smoothing_speed = 1.0
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_yexds")
animation = &"jump"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_eynex")

[node name="JumpSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_brij0")
volume_db = -2.0

[node name="HurtSfx" type="AudioStreamPlayer" parent="."]
volume_db = -2.0

[node name="InvulnerabilityTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="LandingParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, 4)
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 0.8
randomness = 0.5
direction = Vector2(0, -1)
gravity = Vector2(0, 200)
initial_velocity_min = 30.0
initial_velocity_max = 60.0
scale_amount_min = 2.0
scale_amount_max = 3.0
color = Color(0.8, 0.8, 0.8, 1)

[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
